force-app/main/default/objects/RFID_TicketValidationMachine__e/RFID_TicketValidationMachine__e.object-meta.xml
<CustomObject>
    <description>This platform event takes the input from ticket validation machines.</description>
    <label>Ticket Validation Machine Event</label>
    <pluralLabel>Ticket Validation Machines Events</pluralLabel>
</CustomObject>