force-app/main/default/objects/RFID_TicketValidationMachine__e/fields/RFID_Available_Trips__c.field-meta.xml
<CustomField>
    <fullName>RFID_Available_Trips__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Available Trips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>