force-app/main/default/objects/RFID_TicketValidationMachine__e/fields/RFID_FullName__c.field-meta.xml
<CustomField>
    <fullName>RFID_FullName__c</fullName>
    <description>This filed stores the traveller&apos;s FullName read by the Validation Machine from his card.</description>
    <label>FullName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>