force-app/main/default/objects/RFID_TicketValidationMachine__e/fields/RFID_Latitude__c.field-meta.xml
<CustomField>
    <fullName>RFID_Latitude__c</fullName>
    <description>This filed stores the Latitude captured in the moment of validation.</description>
    <label>Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>