force-app/main/default/objects/RFID_TicketValidationMachine__e/fields/RFID_Longitude__c.field-meta.xml
<CustomField>
    <fullName>RFID_Longitude__c</fullName>
    <description>This filed stores the Longitude captured in the moment of validation.</description>
    <label>Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>