force-app/main/default/objects/RFID_TicketValidationMachine__e/fields/RFID_Station__c.field-meta.xml
<CustomField>
    <fullName>RFID_Station__c</fullName>
    <label>Station</label>
    <length>50</length>
    <type>Text</type>
</CustomField>