force-app/main/default/objects/RFID_TicketValidationMachine__e/fields/RFID_Tag__c.field-meta.xml
<CustomField>
    <fullName>RFID_Tag__c</fullName>
    <description>This field stores the unique ID Tag of a Card, which was read by the Validation Machine.</description>
    <label>ID Tag</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>