force-app/main/default/objects/RFID_TicketValidationMachine__e/fields/RFID_Transport_Line__c.field-meta.xml
<CustomField>
    <fullName>RFID_Transport_Line__c</fullName>
    <description>This field stores the Transport Line that the Validation Machine is assigned to.</description>
    <label>Transport Line</label>
    <type>Date</type>
</CustomField>